--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.10.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-config": "^1.6.1",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
