--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/bottom-tabs": "^7.10.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.0",
+    "@supabase/supabase-js": "^2.91.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-config": "^1.6.1",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
