--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,10 @@ ios/build/
 **/Pods/
 /vendor/bundle/
 
+# Environment files
+.env
+.env.*
+
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
