--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@supabase/supabase-js": "^2.91.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-document-picker": "^9.1.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-config": "^1.6.1",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
