--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.6.0",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/bottom-tabs": "^7.10.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.0",
     "@supabase/supabase-js": "^2.91.0",
+    "date-fns": "^4.1.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-config": "^1.6.1",
     "react-native-document-picker": "^9.1.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.14.5",
+    "react-native-paper-dates": "^0.23.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
     "react-native-url-polyfill": "^3.0.0",
